--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
-    <script type="module" src="/src/client.tsx"></script>
+    <script type="module" src="/src/client/client.tsx"></script>
   </body>
 </html>
